# bolt

./: bolt_preplan(1).md  bolt_preplan.md
bolt_ai_v2/bolt_v2/: .env.example  .gitignore  APP_MAP.md  DEBUG_REPORT.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
bolt_ai_v2/bolt_v2/bolt-dashboard/: package.json  pnpm-lock.yaml
bolt_ai_v2/bolt_v2/code/: __init__.py  analytics_tracker.py  api.py  backup_system.py  budget_enforcer.py  caption_composer.py  config.json  confirmation_checker.py  content_automation_master.py  content_extractor.py  content_validator.py  cost_tracker.py  database.py  distribution_orchestrator.py  hitl.py  http_utils.py  job_worker.py  llm_pool.py  local_tts.py  news_aggregator.py  news_source_prober.py  notifications.py  observability.py  platform_publisher.py  script_generator.py  secrets_manager.py  shared_config.py  video_pipeline.py
bolt_ai_v2/bolt_v2/docs/: ai_news_sources.md  character_persona.md  content_calendar.md  final_report.docx  final_report.md  final_report_content_strategy.docx  final_report_content_strategy.md  market_and_audience_analysis.md  optimization_strategies.md  quality_scoring_system.md  research_plan_AI_Robot_Character.md  research_plan_Content_Strategy.md  script_templates.md  visual_design_and_brand_guidelines.md  voice_characteristics.md
bolt_ai_v2/bolt_v2/scripts/: setup.sh
bolt_ai_v2/bolt_v2/tests/: conftest.py  test_budget_enforcer.py  test_content_extractor.py  test_database.py  test_llm_pool.py  test_news_aggregator.py  test_quality_gate.py  (+2 more)
(+26 files in other folders)
